# Research

./: .gitignore
doob-synapses/: .gitignore  CITATION.cff  LICENSE  PLAN.md  README.md  STATUS.md  info.txt  laymen.md  lit_notes.md  pyproject.toml  requirements.txt
doob-synapses/experiments/: common.py  exp0_falsifier.py  exp1_isolation.py  exp2_bss2.py  exp3_baselines.py  exp4_modality.py  exp5_silicon.py  exp6_forward.py  make_figures.py
doob-synapses/paper/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib  verify_regen.py
doob-synapses/results/: bss2_silicon_noise.json  bss2_silicon_training.json  clamp_frac.json  exp0_falsifier.json  exp1_isolation.json  exp2_bss2.json  exp3_baselines.json  exp4_modality.json  exp5_silicon.json  exp6_forward.json
doob-synapses/tests/: test_bss2.py  test_diffusion.py  test_energy.py  test_hwloop.py  test_sim.py  test_stats.py
emergence-watch/: LICENSE  README.md  pyproject.toml
emergence-watch/emergence_watch/: __init__.py  anchors.py  callback.py  events.py  forecaster.py  probes.py  scoring.py
emergence-watch/examples/: watch_checkpoint_stream.py
emergence-watch/tests/: test_all.py
energy-effic/: .gitignore  PLAN.md  README.md  info.txt  laymen.md  pyproject.toml
energy-effic/experiments/: bench_timing.py  common.py  exp0_validation.py  exp1_prediction.py  exp2_allocation.py  exp3_budget_training.py  exp3b_absolute_theta.py  exp4_controls.py  make_figures.py  train_base.py
energy-effic/paper/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib  verify_regen.py
energy-effic/results/: base_training.json  exp0_eps_sweep.json  exp0_gate_v.json  exp0_multisine.json  exp0_ou.json  exp0_rice_gp.json  exp0_sod_gamma.json  exp1_enwik8.json  exp1_gate_p.json  exp1_psmnist.json  exp1_sc2.json  exp2_psmnist.json  exp2_sc2.json  exp3_psmnist.json  exp3_sc2.json  exp3b_psmnist.json  exp3b_sc2.json  exp4_psmnist.json  exp4_psmnist_histograms.json  exp4_sc2.json  exp4_sc2_histograms.json  timing.json
energy-effic/tests/: test_correctness.py
faithful-selection/: .gitignore  PLAN.md  README.md  STATUS.md  info.txt  laymen.md  pyproject.toml
faithful-selection/experiments/: exp2_claude.py  fit_all.py  judge_all.py  judge_v.py  make_figures.py  run_all.sh  run_model.py
faithful-selection/paper/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib  verify_regen.py
faithful-selection/results/: claude_e2.json  judge_v_nemotron8b.json  nemotron8b_e0.json  phi35_e3.json  qwen7b_e3.json  vjudge_claude_e2.json  vjudge_nemotron8b_e0.json  vjudge_phi35_e3.json  vjudge_qwen7b_e3.json
faithful-selection/tests/: test_analysis.py  test_hints.py  test_selection.py
heckman-selection/: .gitignore  PLAN.md  README.md  info.txt  laymen.md  pyproject.toml
heckman-selection/data/: lcbench_calib.json  mma16p3selection.txt  pd1_calib.json
heckman-selection/experiments/: common.py  convert_lcbench.py  convert_pd1.py  expA_e0.py  expA_e1.py  expA_e2.py  expA_e4.py  expA_fig1data.py  expB_calib.py  expB_calib_pd1.py  expB_e0.py  expB_e1.py  expB_e2.py  expB_fig1data.py  make_figures.py
heckman-selection/paper/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib
heckman-selection/paper2/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib  verify_regen.py
heckman-selection/results/: expA_e0.json  expA_e1.json  expA_e1_smoke.json  expA_e2.json  expA_e2_smoke.json  expA_e4.json  expA_fig1_illustration.json  expB_e0.json  expB_e0_smoke.json  expB_e1.json  expB_e1_smoke.json  expB_e2.json  expB_e2_smoke.json  expB_fig1_illustration.json
heckman-selection/tests/: test_lc.py  test_selection.py  test_synth.py
kac-rice/: GREEN_SPEC_kacrice_spectral.md  PHASE2_PINN_SPEC.md  PHASE3_MINKOWSKI_SPEC.md  README.md  laymen.md  pyproject.toml
kac-rice/experiments/: bench_timing.py  common.py  exp1_1d.py  exp1_2d.py  exp2_nonuniform.py  make_figures.py  make_figures_phase2.py  make_figures_phase3.py  run_paper.py  run_phase2.py  run_phase3.py  summarize.py
kac-rice/paper/: main.tex  references.bib
kac-rice/paper2/: main.tex  references.bib
kac-rice/paper3/: main.tex  references.bib
kac-rice/results/: exp1_1d_history.json
kac-rice/tests/: test_correctness.py  test_phase2.py  test_phase3.py
selection-amplify/: .gitignore  PLAN.md  info.txt  lit_notes.md  pyproject.toml  requirements.txt
selection-amplify/experiments/: calibrate.py  common.py  exp0_sanity.py  exp1_bridge.py  exp2_curve.py  exp3_mnist.py  exp4_squeeze.py  exp5_real.py  make_figures.py
selection-amplify/paper/: abstract_body.tex  gen_paper_numbers.py  limitations_body.tex  main.tex  numbers.tex  references.bib  results_body.tex  results_e3e5.tex  results_intro.tex  verify_regen.py
selection-amplify/results/: exp0_sanity.json  exp1_bridge.json  exp2_curve.json  exp4_squeeze.json  exp5_real.json
selection-amplify/tests/: test_bridge.py  test_data.py  test_diffusion.py  test_entropy.py  test_selection.py  test_stats.py  test_validate.py
spatiotemporal-extrapolation/: .gitignore  CITATION.cff  PLAN.md  README.md  info.txt  laymen.md  pyproject.toml  requirements.txt
spatiotemporal-extrapolation/experiments/: common.py  exp0_scaling_study.py  exp1_learned_operator.py  exp2_scaling_flow.py  exp3_baselines.py  exp4_boundary.py  exp5_nikolaevskiy.py  floweval.py  make_figures.py
spatiotemporal-extrapolation/paper/: gen_paper_numbers.py  main.tex  numbers.tex  references.bib
spatiotemporal-extrapolation/results/: exp0_scaling.json  exp1_learned.json  (+4 more)
verifier/: PLAN.md  README.md  STATUS.md  compass_artifact_wf-36d75698-1388-594a-85cc-fea264c469f7_text_markdown.md  info.txt  laymen.md  lit_notes.md  pyproject.toml
(+1947 files in other folders)
