[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doobsyn"
version = "0.1.0"
description = "Intrinsic-noise consolidation: a Doob-h-transform barrier-conditioned diffusion for on-chip continual learning"
authors = [{ name = "Gunner Levi Howe", email = "gunnerlevihowe@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib", "torch", "torchvision"]

[tool.setuptools.packages.find]
where = ["src"]
