[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence-watch"
version = "0.1.0.dev0"
description = "Training telemetry for capability emergence: circuit-precursor alarms, calibrated timing forecasts, and certified false-alarm rates."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gunner Levi Howe", email = "gunnerlevihowe@gmail.com" }]
dependencies = ["torch>=2.0", "numpy>=1.24"]

[project.optional-dependencies]
hf = ["transformers>=4.40"]

[tool.setuptools.packages.find]
include = ["emergence_watch*"]
