[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heckesel"
version = "0.1.0"
description = "Heckman-type selection models for machine learning: selection-corrected epistemic uncertainty and survivor-bias-corrected learning-curve surrogates"
authors = [{ name = "Gunner Levi Howe", email = "gunnerlevihowe@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["torch", "numpy", "scipy", "matplotlib", "statsmodels"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: multi-minute recovery tests (deselect with '-m \"not slow\"')"]
