[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novjudge"
version = "0.0.1"
description = "Signal vs. substance in LLM research judges: crossed-factor test, reward-hackability, and a steering fix."
authors = [{ name = "Gunner Levi Howe" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
    "peft>=0.12",
    "datasets>=2.20",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "statsmodels>=0.14",   # mixed-effects estimator (Y ~ S + G + S:G + (1|stem))
    "scikit-learn>=1.4",   # linear probes / signal classifier
    "sentence-transformers>=3.0",  # judge-independent G (signal) embedding score
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "anthropic>=0.34",     # API judges / adjudicator
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
